added in more readable date, reorganized vendor libs

--- a/main.html
+++ b/main.html
@@ -2,7 +2,8 @@
 <html>
 <head>
  <link rel="stylesheet" type="text/css" href="/css/styles.css">
- <script src="/js/jquery-2.1.4.js"></script>
+ <script src="/vendor/jquery/jquery-2.1.4.js"></script>
+ <script src="/vendor/moment/moment.js"></script>
  <script src="/js/popup.js"></script>
 </head>
 <body>
