--- a/main.html
+++ b/main.html
@@ -6,8 +6,13 @@
  <script src="/vendor/moment/moment.js"></script>
  <script src="/js/popup.js"></script>
 </head>
-<body>
+<body style="min-width:800px;min-height:488px">
+<div id="tab-launcher" >
+  <textarea style="width:85%; height:7em;" class="js-text"></textarea>
+  <button class="js-submit">Launch tabs</button>
+</div>
 
+<hr />
 <div id="snap-display"></div>
 
 </body>
