cram in "snapshot now" functionality

--- a/main.html
+++ b/main.html
@@ -9,10 +9,11 @@
 <body style="min-width:800px;min-height:488px">
 <div id="tab-launcher" >
   <textarea style="width:85%; height:7em;" class="js-text"></textarea>
-  <button class="js-submit">Launch tabs</button>
+  <button class="js-submit" style="padding:.5em">Launch tabs</button>
 </div>
 
 <hr />
+<button id="snap-now" style="padding:.5em;margin-bottom:1em">Snapshot now</button>
 <div id="snap-display"></div>
 
 </body>
