--- a/main.html
+++ b/main.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
- <link rel="stylesheet" type="text/css" href="/css/styles.css">
- <script src="/vendor/jquery/jquery-2.1.4.js"></script>
- <script src="/vendor/moment/moment.js"></script>
- <script src="/js/popup.js"></script>
-</head>
-<body style="min-width:800px;min-height:488px">
-<div id="tab-launcher" >
-  <textarea style="width:85%; height:7em;" class="js-text"></textarea>
-  <button class="js-submit" style="padding:.5em">Launch tabs</button>
-</div>
+  <head>
+    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+    <script src="/vendor/jquery/jquery-2.1.4.js"></script>
+    <script src="/vendor/moment/moment.js"></script>
+    <script src="/js/popup.js"></script>
+  </head>
 
-<hr />
-<button id="snap-now" style="padding:.5em;margin-bottom:1em">Snapshot now</button>
-<div id="snap-display"></div>
-
-</body>
+  <body style="min-width:800px; min-height:488px">
+    <div id="tab-launcher">
+      <textarea style="width:85%; height:7em;" class="js-text"></textarea>
+      <button class="js-submit" style="padding:.5em">Launch tabs</button>
+    </div>
+    <hr />
+    <button id="snap-now" style="padding:.5em; margin-bottom:1em;">Snapshot now</button>
+    <div id="snap-display"></div>
+  </body>
 </html>
